--- a/ServicePrime/ServicePrime.csproj
+++ b/ServicePrime/ServicePrime.csproj
@@ -69,7 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="InstallServiceUsingInstallutil-ReadME.txt" />
